--- a/templates/views/student/studentProfile.ejs
+++ b/templates/views/student/studentProfile.ejs
@@ -7,7 +7,7 @@
                         width="150px"
                         src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
                     <button type="button"
-                        onclick="window.location.href=`https://drive.google.com/drive/folders/1p7XGVDjBJKqgj-1czTJ04WUVLchprtX4?usp=sharing`"
+                        onclick="window.location.href=`link for your material`"
                         class="btn btn-outline-dark m-2 btn-block">Material Section</button>
                     <button type="button" onclick="window.location.href='/student/companysection';"
                         class="btn btn-outline-dark m-2 btn-block">Company Section</button>
@@ -127,25 +127,6 @@
     </div>
     </div>
     </div>
-    <script>
-        // window.onload = function () {
-        //     if (!window.location.hash) {
-        //         window.location = window.location + '#loaded';
-        //         window.location.reload();
-        //         console.log(document.referrer);
-        //     }
-        //     // How to set back history after form submission
-        // }
-//         window.location.href = "localhost:5000/student/studentProfile?reload=true";
-//                 window.onload = function() {
-//   const params = new URLSearchParams(window.location.search);
-//   if (params.get('reload')) {
-//     // Reload the page once if the query parameter is present
-//     setTimeout(function() {
-//       location.reload();
-//     }, 1000);
-//   }
-// };
-    </script>
+    
 
     <%- include('../includes/studentfooter.ejs')%>
